--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,18 @@
   text-align: center;
 }
 
+#table-attendances{
+  th{
+    vertical-align: middle;
+    text-align: center;
+  }
+  td{
+    vertical-align: middle;
+    text-align: center;
+  }
+}
+
+
 .label-signup{
   margin-top: 5px;
 }
