--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,25 +1,37 @@
-.user-table{
+/* ユーザー情報テーブル */
+
+.user-table {
   vertical-align: middle;
   text-align: center;
 }
 
-#table-attendances{
-  th{
+/* ユーザー情報下ボタン */
+
+.btn-users-show {
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+
+/* ユーザー勤怠情報テーブル */
+
+#table-attendances {
+  th {
     vertical-align: middle;
     text-align: center;
   }
-  td{
+  td {
     vertical-align: middle;
     text-align: center;
   }
 }
 
+/* 入力フォーム */
 
-.label-signup{
+.label-signup {
   margin-top: 5px;
 }
 
-.btn-signup{
+.btn-signup {
   margin-top: 10px;
 }
 
@@ -31,11 +43,15 @@
   margin-top: 10px;
 }
 
+/* ユーザー一覧ページ */
+
 #table-users {
   td {
     vertical-align: middle;
   }  
 }
+
+/* 基本情報編集モーダルウインドウ */
 
 .label-basic-info {
   margin-top: 5px;
